---
source: tests/integration_test.rs
expression: record
info: "type=GRP_MGMT msg=audit(1481076992.419:386): pid=1235 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:unconfined_service_t:s0 msg='op=add-shadow-group id=1000 exe=\"/usr/sbin/groupadd\" hostname=? addr=? terminal=? res=success'"
---
{
  "record_type": "GRP_MGMT",
  "timestamp": 1481076992419,
  "id": 386,
  "fields": {
    "auid": "4294967295",
    "msg": {
      "addr": "?",
      "exe": "/usr/sbin/groupadd",
      "hostname": "?",
      "id": "1000",
      "op": "add-shadow-group",
      "res": "success",
      "terminal": "?"
    },
    "pid": "1235",
    "ses": "4294967295",
    "subj": "system_u:system_r:unconfined_service_t:s0",
    "uid": "0"
  }
}
